--- a/Prova_A/E01.html
+++ b/Prova_A/E01.html
@@ -8,13 +8,18 @@
     */
 
     //Entrada
-
-
+    let lista = [5, 22, 17, 4, 18, 93].sort((a, b) => b - a);;
+    let par = []
+    let impar = []
     //Processamento
-
+    for (const numero of lista) {
+        if (numero%2==0) {par.push(numero)} 
+        else if (numero%2!=0) {impar.push(numero)}
+    }
 
     //Saída
-    
+    document.write(`lista par: ${par} <br>`)
+    document.write(`lista impar: ${impar} `)
 
     /*
     O programa deverá apresentar:
